--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
 <body>
     <header class="header container">
           <a href="/" class="logo">
-            <img width="128" src="img/logo.png" alt="лого: индекс еда" class="logo-image">
+            <img width="128" src="img/logo.png" alt="Р›РѕРіРѕ: РРЅРґРµРєСЃ.РµРґР°" class="logo-image">
         </a>
         <form action="#" class="search-form">
-            <input class="search-input" type="search" placeholder="Блюда">
+            <input class="search-input" type="search" placeholder="Р‘Р»СЋРґР°">
             <button class="search-button">
                 <img src="img/search-icon.svg" alt="search-icon" class="search-icon">
             </button>
         </form>
         <div class="auth">
-            <a href="" class="login">Войти</a>
+            <a href="" class="login">Р’РѕР№С‚Рё</a>
         </div>
         <a href="#" class="shoping-cart">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
