--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header class="header container">
-          <a href="/index.html" class="logo">
+          <a href="/project.eda/" class="logo">
             <img width="128" src="img/logo.png" alt="Лого: Индекс.еда" class="logo-image">
         </a>
         <form action="#" class="search-form">
