--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
                     <a href="#" class="button button-default">Ð¡Ð¾Ð±Ñ€Ð°Ñ‚ÑŒ ÐºÐ¾Ñ€Ð·Ð¸Ð½Ñƒ</a>
                 </div>
             </section>
+            <!-- ëåâàÿ êàðòî÷êà -->
             <section class="card card-text-light sweet-bascket card-two">
                 <img src="../img/min-ys.png" alt="ÐœÐ¸Ð½Ð¸Ð¼ÑƒÐ¼ ÑƒÑÐ¸Ð»Ð¸Ð¹" class="card-image">
                 <div class="card-header">
@@ -82,6 +83,7 @@
                     <a href="#" class="button button-default">Ð¡Ð¾Ð±Ñ€Ð°Ñ‚ÑŒ ÐºÐ¾Ñ€Ð·Ð¸Ð½Ñƒ</a>
                 </div>
             </section>
+            <!-- ïðàâàÿ êàðòî÷êà -->
         </div>
     </main>
     
