--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
         <div class="promo">
             <section class="card card-text-light sweet-bascket">
-                <img src="../img/sweet-bascket.png" alt="Сладкая корзина" class="card-image">
+                <img src="img/sweet-bascket.png" alt="Сладкая корзина" class="card-image">
                 <div class="card-header">
                     <h3 class="card-title">Сладкая корзина</h3>
                     <p class="card-description">Произвольный выбор
@@ -70,7 +70,7 @@
             </section>
             <!-- левая карточка -->
             <section class="card card-text-light sweet-bascket card-two">
-                <img src="../img/min-ys.png" alt="Минимум усилий" class="card-image">
+                <img src="img/min-ys.png" alt="Минимум усилий" class="card-image">
                 <div class="card-header">
                     <h3 class="card-title">Минимум усилий</h3>
                     <p class="card-description">Произвольный выбор
