--- a/index.html
+++ b/index.html
@@ -208,31 +208,25 @@
                         для всей семьи</p>
                 </div>
                 <div class="benefit-card">
-                    <img src="./img/benefits/ben1.svg" class="benefit-card-img">
-                    <h3 class="benefit-tag">Какой путь проходит
-                        ваша еда</h3>
-                    <p class="benefit-description">Вы делаете заказ на коробку
-                        с недельным запасом
-                        полуфабрикатов и готовых блюд
-                        для всей семьи</p>
+                    <img src="./img/benefits/ben2.svg" class="benefit-card-img">
+                    <h3 class="benefit-tag">Как происходит
+                        производство</h3>
+                    <p class="benefit-description">За день до доставки мы сами готовим блюда из натуральных продуктов без консервантов, красителей и гмо</p>
                 </div>
                 <div class="benefit-card">
-                    <img src="./img/benefits/ben1.svg" class="benefit-card-img">
-                    <h3 class="benefit-tag">Какой путь проходит
-                        ваша еда</h3>
-                    <p class="benefit-description">Вы делаете заказ на коробку
-                        с недельным запасом
-                        полуфабрикатов и готовых блюд
-                        для всей семьи</p>
+                    <img src="./img/benefits/ben3.svg" class="benefit-card-img">
+                    <h3 class="benefit-tag">Высокие стандарты
+                        качества</h3>
+                    <p class="benefit-description">Наши повара с многолетним опытом с любовью готовят каждую порцию блюда</p>
                 </div>
                 <div class="benefit-card">
-                    <img src="./img/benefits/ben1.svg" class="benefit-card-img">
-                    <h3 class="benefit-tag">Какой путь проходит
-                        ваша еда</h3>
-                    <p class="benefit-description">Вы делаете заказ на коробку
-                        с недельным запасом
-                        полуфабрикатов и готовых блюд
-                        для всей семьи</p>
+                    <img src="./img/benefits/ben4.svg" class="benefit-card-img">
+                    <h3 class="benefit-tag">Быстрая и качественная
+                        доставка</h3>
+                    <p class="benefit-description">Сами доставим всё прямов
+                        в вашу морозилку, сохранив
+                        температурный режим
+                        и качество наших блюд</p>
                 </div>
             </div>
         </section>
